--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "three": "^0.157.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
