--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "3d",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.1.0",
+  "private": false,
+  "author": {
+    "name": "Sugarscat",
+    "url": "https://sugarscat.com"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
