--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^10.5.0",
     "three": "^0.157.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
